Cleanup tests
Signed-off-by: Piotr Olaszewski <piotr.olaszewski@thulium.pl>