@@ -1,5 +1,5 @@
 /*
- * Copyright 2017-2022 the original author or authors.
+ * Copyright 2017-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,11 +15,10 @@
  */
 package org.springframework.shell;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -32,8 +31,7 @@ import org.springframework.shell.command.CommandCatalog;
 import org.springframework.shell.command.CommandRegistration;
 import org.springframework.shell.completion.RegistrationOptionsCompletionResolver;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.fail;
+import static org.assertj.core.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.Mockito.doThrow;
@@ -45,7 +43,7 @@ import static org.mockito.Mockito.when;
  * @author Eric Bottard
  */
 @ExtendWith(MockitoExtension.class)
-public class ShellTests {
+class ShellTests {
 
 	@Mock
 	private InputProvider inputProvider;
@@ -59,15 +57,13 @@ public class ShellTests {
 	@InjectMocks
 	private Shell shell;
 
-	private boolean invoked;
-
 	@BeforeEach
-	public void setUp() {
-		shell.setCompletionResolvers(Arrays.asList(new RegistrationOptionsCompletionResolver()));
+	void setUp() {
+		shell.setCompletionResolvers(List.of(new RegistrationOptionsCompletionResolver()));
 	}
 
 	@Test
-	public void commandMatch() throws Exception {
+	void commandMatch() {
 		when(inputProvider.readInput()).thenReturn(() -> "hello world how are you doing ?");
 		doThrow(new Exit()).when(resultHandlerService).handle(any());
 
@@ -81,19 +77,11 @@ public class ShellTests {
 		registrations.put("hello world", registration);
 		when(commandRegistry.getRegistrations()).thenReturn(registrations);
 
-		try {
-			shell.run(inputProvider);
-			fail("Exit expected");
-		}
-		catch (Exit expected) {
-			System.out.println(expected);
-		}
-
-		assertThat(invoked).isTrue();
+		assertThatExceptionOfType(Exit.class).isThrownBy(() -> shell.run(inputProvider));
 	}
 
 	@Test
-	public void commandNotFound() throws Exception {
+	void commandNotFound() {
 		when(inputProvider.readInput()).thenReturn(() -> "hello world how are you doing ?");
 		doThrow(new Exit()).when(resultHandlerService).handle(isA(CommandNotFound.class));
 
@@ -107,18 +95,12 @@ public class ShellTests {
 		registrations.put("hello world", registration);
 		when(commandRegistry.getRegistrations()).thenReturn(registrations);
 
-		try {
-			shell.run(inputProvider);
-			fail("Exit expected");
-		}
-		catch (Exit expected) {
-
-		}
+		assertThatExceptionOfType(Exit.class).isThrownBy(() -> shell.run(inputProvider));
 	}
 
 	@Test
 	// See https://github.com/spring-projects/spring-shell/issues/142
-	public void commandNotFoundPrefix() throws Exception {
+	void commandNotFoundPrefix() {
 		when(inputProvider.readInput()).thenReturn(() -> "helloworld how are you doing ?");
 		doThrow(new Exit()).when(resultHandlerService).handle(isA(CommandNotFound.class));
 
@@ -132,17 +114,11 @@ public class ShellTests {
 		registrations.put("hello world", registration);
 		when(commandRegistry.getRegistrations()).thenReturn(registrations);
 
-		try {
-			shell.run(inputProvider);
-			fail("Exit expected");
-		}
-		catch (Exit expected) {
-
-		}
+		assertThatExceptionOfType(Exit.class).isThrownBy(() -> shell.run(inputProvider));
 	}
 
 	@Test
-	public void noCommand() throws Exception {
+	void noCommand() {
 		when(inputProvider.readInput()).thenReturn(() -> "", () -> "hello world how are you doing ?", null);
 		doThrow(new Exit()).when(resultHandlerService).handle(any());
 
@@ -156,19 +132,11 @@ public class ShellTests {
 		registrations.put("hello world", registration);
 		when(commandRegistry.getRegistrations()).thenReturn(registrations);
 
-		try {
-			shell.run(inputProvider);
-			fail("Exit expected");
-		}
-		catch (Exit expected) {
-
-		}
-
-		assertThat(invoked).isTrue();
+		assertThatExceptionOfType(Exit.class).isThrownBy(() -> shell.run(inputProvider));
 	}
 
 	@Test
-	public void commandThrowingAnException() throws Exception {
+	void commandThrowingAnException() {
 		when(inputProvider.readInput()).thenReturn(() -> "fail");
 		doThrow(new Exit()).when(resultHandlerService).handle(isA(SomeException.class));
 
@@ -182,27 +150,18 @@ public class ShellTests {
 		registrations.put("fail", registration);
 		when(commandRegistry.getRegistrations()).thenReturn(registrations);
 
-
-		try {
-			shell.run(inputProvider);
-			fail("Exit expected");
-		}
-		catch (Exit expected) {
-
-		}
-
-		assertThat(invoked).isTrue();
+		assertThatExceptionOfType(Exit.class).isThrownBy(() -> shell.run(inputProvider));
 	}
 
 	@Test
-	public void comments() throws Exception {
+	void comments() throws Exception {
 		when(inputProvider.readInput()).thenReturn(() -> "// This is a comment", (Input) null);
 
 		shell.run(inputProvider);
 	}
 
 	@Test
-	public void commandNameCompletion() throws Exception {
+	void commandNameCompletion() {
 		CommandRegistration registration1 = CommandRegistration.builder()
 			.command("hello world")
 			.withTarget()
@@ -221,54 +180,52 @@ public class ShellTests {
 		when(commandRegistry.getRegistrations()).thenReturn(registrations);
 
 		// Invoke at very start
-		List<String> proposals = shell.complete(new CompletionContext(Arrays.asList(""), 0, "".length(), null, null))
-				.stream().map(CompletionProposal::value).collect(Collectors.toList());
+		List<String> proposals = shell.complete(new CompletionContext(List.of(""), 0, "".length(), null, null))
+				.stream().map(CompletionProposal::value).toList();
 		assertThat(proposals).containsExactlyInAnyOrder("another command", "hello world");
 
 		// Invoke in middle of first word
-		proposals = shell.complete(new CompletionContext(Arrays.asList("hel"), 0, "hel".length(), null, null))
-				.stream().map(CompletionProposal::value).collect(Collectors.toList());
+		proposals = shell.complete(new CompletionContext(List.of("hel"), 0, "hel".length(), null, null))
+				.stream().map(CompletionProposal::value).toList();
 		assertThat(proposals).containsExactly("hello world");
 
 		// Invoke at end of first word (no space after yet)
-		proposals = shell.complete(new CompletionContext(Arrays.asList("hello"), 0, "hello".length(), null, null))
-				.stream().map(CompletionProposal::value).collect(Collectors.toList());
+		proposals = shell.complete(new CompletionContext(List.of("hello"), 0, "hello".length(), null, null))
+				.stream().map(CompletionProposal::value).toList();
 		assertThat(proposals).containsExactly("hello world");
 
 		// Invoke after first word / start of second word
-		proposals = shell.complete(new CompletionContext(Arrays.asList("hello", ""), 1, "".length(), null, null))
-				.stream().map(CompletionProposal::value).collect(Collectors.toList());
+		proposals = shell.complete(new CompletionContext(List.of("hello", ""), 1, "".length(), null, null))
+				.stream().map(CompletionProposal::value).toList();
 		assertThat(proposals).containsExactly("world");
 
 		// Invoke in middle of second word
-		proposals = shell.complete(new CompletionContext(Arrays.asList("hello", "wo"), 1, "wo".length(), null, null))
-				.stream().map(CompletionProposal::value).collect(Collectors.toList());
+		proposals = shell.complete(new CompletionContext(List.of("hello", "wo"), 1, "wo".length(), null, null))
+				.stream().map(CompletionProposal::value).toList();
 		assertThat(proposals).containsExactly("world");
 
 		// Invoke at end of whole command (no space after yet)
-		proposals = shell.complete(new CompletionContext(Arrays.asList("hello", "world"), 1, "world".length(), null, null))
-				.stream().map(CompletionProposal::value).collect(Collectors.toList());
+		proposals = shell.complete(new CompletionContext(List.of("hello", "world"), 1, "world".length(), null, null))
+				.stream().map(CompletionProposal::value).toList();
 		assertThat(proposals).containsExactly("world");
 
 		// Invoke in middle of second word
-		proposals = shell.complete(new CompletionContext(Arrays.asList("hello", "world", ""), 2, "".length(), null, null))
-				.stream().map(CompletionProposal::value).collect(Collectors.toList());
+		proposals = shell.complete(new CompletionContext(List.of("hello", "world", ""), 2, "".length(), null, null))
+				.stream().map(CompletionProposal::value).toList();
 		assertThat(proposals).isEmpty();
 	}
 
 	@SuppressWarnings("unused")
 	private void helloWorld(String a) {
-		invoked = true;
 	}
 
 	@SuppressWarnings("unused")
 	private String failing() {
-		invoked = true;
 		throw new SomeException();
 	}
 
 	@Test
-	public void completionArgWithMethod() throws Exception {
+	void completionArgWithMethod() {
 		CommandRegistration registration1 = CommandRegistration.builder()
 			.command("hello world")
 			.withTarget()
@@ -283,13 +240,13 @@ public class ShellTests {
 		registrations.put("hello world", registration1);
 		when(commandRegistry.getRegistrations()).thenReturn(registrations);
 
-		List<String> proposals = shell.complete(new CompletionContext(Arrays.asList("hello", "world", ""), 2, "".length(), null, null))
-				.stream().map(CompletionProposal::value).collect(Collectors.toList());
+		List<String> proposals = shell.complete(new CompletionContext(List.of("hello", "world", ""), 2, "".length(), null, null))
+				.stream().map(CompletionProposal::value).toList();
 		assertThat(proposals).containsExactlyInAnyOrder("--arg1");
 	}
 
 	@Test
-	public void completionArgWithFunction() throws Exception {
+	void completionArgWithFunction() {
 		CommandRegistration registration1 = CommandRegistration.builder()
 			.command("hello world")
 			.withTarget()
@@ -306,13 +263,13 @@ public class ShellTests {
 		registrations.put("hello world", registration1);
 		when(commandRegistry.getRegistrations()).thenReturn(registrations);
 
-		List<String> proposals = shell.complete(new CompletionContext(Arrays.asList("hello", "world", ""), 2, "".length(), null, null))
-				.stream().map(CompletionProposal::value).collect(Collectors.toList());
+		List<String> proposals = shell.complete(new CompletionContext(List.of("hello", "world", ""), 2, "".length(), null, null))
+				.stream().map(CompletionProposal::value).toList();
 		assertThat(proposals).containsExactlyInAnyOrder("--arg1");
 	}
 
 	@Test
-	public void shouldCompleteWithCorrectArgument() throws Exception {
+	void shouldCompleteWithCorrectArgument() {
 		CommandRegistration registration1 = CommandRegistration.builder()
 			.command("hello world")
 			.withTarget()
@@ -320,27 +277,27 @@ public class ShellTests {
 				.and()
 			.withOption()
 				.longNames("arg1")
-				.completion(ctx -> Arrays.asList("arg1Comp1").stream().map(CompletionProposal::new).collect(Collectors.toList()))
+				.completion(ctx -> Stream.of("arg1Comp1").map(CompletionProposal::new).toList())
 				.and()
 			.withOption()
 				.longNames("arg2")
-				.completion(ctx -> Arrays.asList("arg2Comp1").stream().map(CompletionProposal::new).collect(Collectors.toList()))
+				.completion(ctx -> Stream.of("arg2Comp1").map(CompletionProposal::new).toList())
 				.and()
 			.build();
 		Map<String, CommandRegistration> registrations = new HashMap<>();
 		registrations.put("hello world", registration1);
 		when(commandRegistry.getRegistrations()).thenReturn(registrations);
 
-		List<String> proposals1 = shell.complete(new CompletionContext(Arrays.asList("hello", "world", "--arg1", ""), 3, "".length(), null, null))
-				.stream().map(CompletionProposal::value).collect(Collectors.toList());
+		List<String> proposals1 = shell.complete(new CompletionContext(List.of("hello", "world", "--arg1", ""), 3, "".length(), null, null))
+				.stream().map(CompletionProposal::value).toList();
 		assertThat(proposals1).containsExactlyInAnyOrder("--arg2", "arg1Comp1");
 
-		List<String> proposals2 = shell.complete(new CompletionContext(Arrays.asList("hello", "world", "--arg1", "xxx", "--arg2", ""), 5, "".length(), null, null))
-				.stream().map(CompletionProposal::value).collect(Collectors.toList());
+		List<String> proposals2 = shell.complete(new CompletionContext(List.of("hello", "world", "--arg1", "xxx", "--arg2", ""), 5, "".length(), null, null))
+				.stream().map(CompletionProposal::value).toList();
 		assertThat(proposals2).containsExactlyInAnyOrder("arg2Comp1");
 
-		List<String> proposals3 = shell.complete(new CompletionContext(Arrays.asList("hello", "world", "--arg2", "xxx", "--arg1", ""), 5, "".length(), null, null))
-				.stream().map(CompletionProposal::value).collect(Collectors.toList());
+		List<String> proposals3 = shell.complete(new CompletionContext(List.of("hello", "world", "--arg2", "xxx", "--arg1", ""), 5, "".length(), null, null))
+				.stream().map(CompletionProposal::value).toList();
 		assertThat(proposals3).containsExactlyInAnyOrder("arg1Comp1");
 	}
 
